Changelog
=========

2.13.4 (unreleased)
-------------------


2.13.3 (2011-07-28)
-------------------

- Fixed problem in reindex document optimization, which could lead to negative
  document counts when reindexing unchanged documents.

2.13.2 (2011-05-04)
-------------------

- Avoid changing data, if the indexed values stayed the same.

2.13.1 (2010-10-02)
-------------------

- Changed word id creation algorithm in Lexicon. Instead of relying on an
  increasing length counter, we use a number from a randomized range. This
  avoids conflict errors while adding new words in multiple parallel
  transactions. Inspired by code from ``enfold.fixes``.

- Lexicon: Added clear method.

- Lexicon: Removed BBB code for instances created with Zope < 2.6.2.

- Added missing namespace_packages declaration to setup.py.

2.13.0 (2010-06-19)
-------------------

- Released as separate package.