@@ -176,7 +176,6 @@ class ZCTextIndex(Persistent, Implicit, SimpleItem):
         try: fields = self._indexed_attrs
         except: fields  = [ self._fieldname ]
 
-        res = 0
         all_texts = []
         for attr in fields:
             text = getattr(obj, attr, None)
@@ -195,9 +194,7 @@ class ZCTextIndex(Persistent, Implicit, SimpleItem):
         # Check that we're sending only strings
         all_texts = filter(lambda text: isinstance(text, basestring), \
                            all_texts)
-        if all_texts:
-            return self.index.index_doc(documentId, all_texts)
-        return res
+        return self.index.index_doc(documentId, all_texts)
 
     def unindex_object(self, docid):
         if self.index.has_doc(docid):
